// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyzeDependencies (local) > should analyze dependencies correctly 1`] = `
{
  "messages": [],
  "stats": {
    "dependencyCount": {
      "development": 1,
      "production": 2,
    },
    "installSize": 956,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;

exports[`analyzeDependencies (local) > should handle empty project 1`] = `
{
  "messages": [],
  "stats": {
    "dependencyCount": {
      "development": 0,
      "production": 0,
    },
    "installSize": 0,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;

exports[`analyzeDependencies (local) > should handle missing node_modules 1`] = `
{
  "messages": [],
  "stats": {
    "dependencyCount": {
      "development": 0,
      "production": 1,
    },
    "installSize": 0,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;

exports[`analyzeDependencies (local) > should handle symlinks 1`] = `
{
  "messages": [],
  "stats": {
    "dependencyCount": {
      "development": 0,
      "production": 1,
    },
    "installSize": 297,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;
